# Componenta

./: Cargo.toml
Component_One_S/: Cargo.toml
Component_One_S/SoketsTest/: Cargo.toml
Component_One_S/SoketsTest/src/: main.rs
Component_One_S/serv/src/: main.rs
Component_One_S/src/: lib – копія.rs  lib.rs
src/: lib.rs
