# Cargo.toml
[package]
name = "SampleAddIn"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
utf16_lit = "2.0"
native_api_1c = "=0.10.7"
serde_json = "1.0.148"
socket2 = "0.6.1"
winapi = { version = "0.3", features = ["winsock2"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }
